#[build-system]
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "megaclite"
version = "0.0.4"
description = "Remote GPU training for Jupyter"
requires-python = ">=3.9"
authors = [{name = "Felix Grzelka", email = "Felix.Grzelka@hpi.de"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = [
    #"version",
    "readme"]
dependencies = [
    "dill==0.3.6",
    "ipython==8.13.1",
    "ipykernel==6.22.0",
    "click==8.1.3",
    "ipywidgets",
    "toml"
]

[tool.setuptools]
packages = ["megaclite"]

[project.urls]
Home = "https://osm.hpi.de"

[project.optional-dependencies]
demo = ["torch==2.0.0",
        "torchvision==0.15.1"
    ]

[tool.setuptools.dynamic]
# version = {attr = "my_package.VERSION"}
readme = {file = ["README.md"]}